# instructx

./: .gitignore  README.md  TODO.md  pyproject.toml
instructx/: __init__.py  partials.py  typed_xml.py  xml.py  xml_parser.py
tests/: openai_function_call.py  parser_2.py  run_examples.py  types.py  xml_streaming.py
tests/examples/: __init__.py  _test.py  list.py  list_class.py  primitive.py  primitive_class.py
